--- a/users/.env
+++ b/users/.env
@@ -1,19 +1,13 @@
 APP_NAME=Goravel
 APP_ENV=local
-APP_KEY=D2A3p803sNF6DrT1iMcPpPCUH5CZAQfm
+APP_KEY=uYqbHP8nDy0R5OI1g2Ba8AJY1D5zHJUw
 APP_DEBUG=true
 APP_URL=http://localhost
-APP_HOST=127.0.0.1
-APP_PORT=3000
+APP_HOST=
+APP_PORT=
 
-GRPC_HOST=
-GRPC_PORT=
-
-GRPC_USER_HOST=127.0.0.1
-GRPC_USER_PORT=3010
-
-GATEWAY_HOST=127.0.0.1
-GATEWAY_PORT=3001
+GRPC_HOST=127.0.0.1
+GRPC_PORT=3010
 
 JWT_SECRET=
 
