Add some endpoints

--- a/gateway/.env.example
+++ b/gateway/.env.example
@@ -6,8 +6,11 @@ APP_URL=http://localhost
 APP_HOST=127.0.0.1
 APP_PORT=3000
 
-GRPC_HOST=
-GRPC_PORT=
+GRPC_USER_HOST=
+GRPC_USER_PORT=
+
+GATEWAY_HOST=
+GATEWAY_PORT=
 
 JWT_SECRET=
 
