--- a/proto/Makefile
+++ b/proto/Makefile
@@ -5,12 +5,12 @@ base:
 		--grpc-gateway_out=./ --grpc-gateway_opt=paths=source_relative \
 		base/base.proto
 
-users:
+user:
 	protoc -I=./ \
 		--go_out=./ --go_opt=paths=source_relative \
 		--go-grpc_out=./ --go-grpc_opt=paths=source_relative \
 		--grpc-gateway_out=./ --grpc-gateway_opt=paths=source_relative \
-		users/users.proto
+		user/user.proto
 
 business:
 	protoc -I=./ \
@@ -19,4 +19,4 @@ business:
 		--grpc-gateway_out=./ --grpc-gateway_opt=paths=source_relative \
 		business/business.proto
 
-all: base users business
+all: base user business
