--- a/package/docker-compose.yml
+++ b/package/docker-compose.yml
@@ -1,9 +1,12 @@
 version: '3'
 
 services:
-  goravel:
-    build:
-      context: .
-    ports:
-      - "3000:3000"
+  db:
+    image: postgres
     restart: always
+    ports:
+      - 5434:5432
+    environment:
+      POSTGRES_DB: goravel
+      POSTGRES_USER: goravel
+      POSTGRES_PASSWORD: goravel
