feat: [GM-35] [BE] Create get email code endpoint

--- a/proto/Makefile
+++ b/proto/Makefile
@@ -12,11 +12,11 @@ user:
 		--grpc-gateway_out=./ --grpc-gateway_opt=paths=source_relative \
 		user/user.proto
 
-business:
+package:
 	protoc -I=./ \
 		--go_out=./ --go_opt=paths=source_relative \
 		--go-grpc_out=./ --go-grpc_opt=paths=source_relative \
 		--grpc-gateway_out=./ --grpc-gateway_opt=paths=source_relative \
-		business/business.proto
+		package/package.proto
 
-all: base user business
+all: base user package
