--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -2,25 +2,7 @@
 version: 2
 updates:
   - package-ecosystem: gomod
-    directory: /gateway
-    schedule:
-      interval: daily
-    groups:
-      go-modules:
-        patterns:
-          - "*"
-    open-pull-requests-limit: 100
-  - package-ecosystem: gomod
-    directory: /user
-    schedule:
-      interval: daily
-    groups:
-      go-modules:
-        patterns:
-          - "*"
-    open-pull-requests-limit: 100
-  - package-ecosystem: gomod
-    directory: /package
+    directory: /src/go
     schedule:
       interval: daily
     groups:
@@ -29,25 +11,7 @@ updates:
           - "*"
     open-pull-requests-limit: 100
   - package-ecosystem: github-actions
-    directory: /gateway
-    schedule:
-      interval: daily
-    groups:
-      github-actions:
-        patterns:
-          - "*"
-    open-pull-requests-limit: 100
-  - package-ecosystem: github-actions
-    directory: /user
-    schedule:
-      interval: daily
-    groups:
-      github-actions:
-        patterns:
-          - "*"
-    open-pull-requests-limit: 100
-  - package-ecosystem: github-actions
-    directory: /package
+    directory: /
     schedule:
       interval: daily
     groups:
