--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -20,6 +20,8 @@ jobs:
         with:
           path: ~/go/pkg/mod
           key: ${{ runner.os }}-go-${{ hashFiles('go.mod') }}
+      - name: Move to go path
+        run: cd src/go
       - name: Install dependencies
         run: go mod tidy
       - name: Lint
