--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -9,7 +9,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Install Protoc
         run: |
-          apt install -y protobuf-compiler
+          apt-get install -y protobuf-compiler
           go install -u github.com/pseudomuto/protoc-gen-doc/cmd/protoc-gen-doc
       - name: Generate Doc
         run: |
