--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -19,5 +19,5 @@ jobs:
       - name: Upload coverage report to Codecov
         uses: codecov/codecov-action@v3
         with:
-          file: ./coverage.out
+          file: ./src/go/coverage.out
           token: ${{ secrets.CODECOV }}
