--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -15,9 +15,9 @@ jobs:
       - name: Install dependencies
         run: cd src/go && go mod tidy
       - name: Run tests with coverage
-        run: go test -v -coverprofile="coverage.out" ./...
+        run: cd src/go && go test -v -coverprofile="coverage.out" ./...
       - name: Upload coverage report to Codecov
         uses: codecov/codecov-action@v3
         with:
-          file: ./coverage.out
+          file: ./src/go/coverage.out
           token: ${{ secrets.CODECOV }}
