--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,4 +1,4 @@
-name: Docker Image CI
+name: Build Docker Image
 
 on:
   create:
@@ -7,11 +7,26 @@ on:
 jobs:
   gateway:
     if: startsWith(github.ref, 'refs/tags/gateway-')
+    strategy:
+      matrix:
+        go:
+          - "1.21"
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./src/go/gateway
+        working-directory: ./src/go
     steps:
     - uses: actions/checkout@v4
+    - name: go mod pakcage cache
+      uses: actions/cache@v3
+      with:
+        path: |
+          ~/.cache/go-build
+          ~/go/pkg/mod
+        key: ${{ runner.os }}-go-${{ matrix.go }}-${{ hashFiles('**/go.mod') }}
+    - name: Install dependencies
+      run: go mod tidy
+    - name: go build
+      run: cd gateway && GOOS=linux GOARCH=amd64 CGO_ENABLED=0 go build --ldflags '-extldflags -static"' -o main .
     - name: Build the Docker image
-      run: docker build -t ${GITHUB_REF##*/} .
+      run: cd gateway && docker build -t ${GITHUB_REF##*/} .
