Optimize gateway docker build

--- a/src/go/gateway/Dockerfile
+++ b/src/go/gateway/Dockerfile
@@ -1,22 +1,22 @@
-FROM golang:alpine AS builder
-
-ENV GO111MODULE=on \
-    CGO_ENABLED=0  \
-    GOARCH="amd64" \
-    GOOS=linux
-
-WORKDIR /build
-COPY . .
-
 FROM alpine:latest
 
 WORKDIR /www
 
-COPY --from=builder /build/main /www/
-COPY --from=builder /build/database/ /www/database/
-COPY --from=builder /build/public/ /www/public/
-COPY --from=builder /build/storage/ /www/storage/
-COPY --from=builder /build/resources/ /www/resources/
-COPY --from=builder /build/.env /www/.env
+COPY ./main /www/
+COPY ./database/ /www/database/
+COPY ./public/ /www/public/
+COPY ./storage/ /www/storage/
+COPY ./resources/ /www/resources/
+
+ENV APP_NAME=Gateway \
+    APP_ENV=${APP_ENV}  \
+    APP_KEY=${APP_KEY} \
+    APP_DEBUG=${APP_DEBUG} \
+    APP_HOST=0.0.0.0 \
+    APP_PORT=${APP_PORT} \
+    GRPC_USER_HOST=0.0.0.0 \
+    GRPC_USER_PORT=${GRPC_USER_PORT} \
+    GATEWAY_HOST=0.0.0.0 \
+    GATEWAY_PORT=${GATEWAY_PORT}
 
 ENTRYPOINT ["/www/main"]
