--- a/src/go/gateway/.env.example
+++ b/src/go/gateway/.env.example
@@ -1,9 +1,8 @@
-APP_NAME=Goravel
+APP_NAME=Gateway
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
-APP_HOST=127.0.0.1
+APP_HOST=0.0.0.0
 APP_PORT=3000
 
 GRPC_USER_HOST=
@@ -11,26 +10,3 @@ GRPC_USER_PORT=
 
 GATEWAY_HOST=
 GATEWAY_PORT=
-
-JWT_SECRET=
-
-LOG_CHANNEL=stack
-LOG_LEVEL=debug
-
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=goravel
-DB_USERNAME=root
-DB_PASSWORD=
-
-REDIS_HOST=127.0.0.1
-REDIS_PASSWORD=
-REDIS_PORT=6379
-
-MAIL_HOST=
-MAIL_PORT=
-MAIL_USERNAME=
-MAIL_PASSWORD=
-MAIL_FROM_ADDRESS=
-MAIL_FROM_NAME=
