Optimize gateway docker build

--- a/.github/workflows/build-docker-image.yml
+++ b/.github/workflows/build-docker-image.yml
@@ -37,9 +37,23 @@ jobs:
         username: ${{ secrets.ALIYUN_ACR_USERNAME }}
         password: ${{ secrets.ALIYUN_ACR_PASSWORD }}
         region-id: ${{ secrets.ALIYUN_ACR_REGION_ID }}
-#        instance-id: ${{ secrets.ALIYUN_ACR_INSTANCE_ID }}
         login-server: ${{ secrets.ALIYUN_ACR_LOGIN_SERVER }}
     - name: Build the Docker image
       run: cd gateway && docker build -t ${{ secrets.ALIYUN_ACR_REGISTRY }}:${GITHUB_REF##*/} .
     - name: Push the Docker image
       run: docker push ${{ secrets.ALIYUN_ACR_REGISTRY }}:${GITHUB_REF##*/}
+    # This step can be moved to the deploy.yml file in the future
+    - name: Update remote server
+      uses: appleboy/ssh-action@v1.0.0
+      with:
+        host: ${{ secrets.DEVELOPMENT_SERVER_HOST }}
+        username: ${{ secrets.DEVELOPMENT_SERVER_USERNAME }}
+        password: ${{ secrets.DEVELOPMENT_SERVER_PASSWORD }}
+        port: ${{ secrets.DEVELOPMENT_SERVER_PORT }}
+        script: |
+          docker pull ${{ secrets.ALIYUN_ACR_REGISTRY }}:${GITHUB_REF##*/}
+          if docker ps --format '{{.Image}}' | grep gateway; then
+            docker stop gateway
+            docker rm gateway
+          fi
+          docker run -it -p 4000:4000 -e APP_PORT=4000 -e GRPC_USER_PORT=4010 -e GATEWAY_PORT=4001 -e APP_ENV=development -e APP_KEY=${{ secrets.GATEWAY_APP_KEY }} -e APP_DEBUG=true --network goravel-market --network-alias gateway --name goravel-market-gateway ${{ secrets.ALIYUN_ACR_REGISTRY }}:${GITHUB_REF##*/}
