--- a/.github/workflows/build-docker-image.yml
+++ b/.github/workflows/build-docker-image.yml
@@ -52,8 +52,8 @@ jobs:
         port: ${{ secrets.DEVELOPMENT_SERVER_PORT }}
         script: |
           docker pull ${{ secrets.ALIYUN_ACR_REGISTRY }}:${GITHUB_REF##*/}
-          if docker ps --format '{{.Image}}' | grep gateway; then
-            docker stop gateway
-            docker rm gateway
-          fi
+#          if docker ps --format '{{.Image}}' | grep gateway; then
+#            docker stop gateway
+#            docker rm gateway
+#          fi
           docker run -dit -p 4000:4000 -e APP_PORT=4000 -e GRPC_USER_PORT=4010 -e GATEWAY_PORT=4001 -e APP_ENV=development -e APP_KEY=${{ secrets.GATEWAY_APP_KEY }} -e APP_DEBUG=true --network goravel-market --network-alias gateway --name goravel-market-gateway ${{ secrets.ALIYUN_ACR_REGISTRY }}:${GITHUB_REF##*/}
