Optimize gateway docker build

--- a/.github/workflows/build-docker-image.yml
+++ b/.github/workflows/build-docker-image.yml
@@ -20,10 +20,10 @@ jobs:
     - name: Set up environment
       id: env_setup
       env:
-        TAG: ${GITHUB_REF##*/}
+        REPO_TAG: ${GITHUB_REF##*/}
       run: |
-        TAG="$TAG"
-        echo "::set-output name=tag::TAG"
+        REPO_TAG="$REPO_TAG"
+        export REPO_TAG
     - uses: actions/setup-go@v5
       with:
         go-version: ${{ matrix.go }}
@@ -46,9 +46,9 @@ jobs:
         region-id: ${{ secrets.ALIYUN_ACR_REGION_ID }}
         login-server: ${{ secrets.ALIYUN_ACR_LOGIN_SERVER }}
     - name: Build the Docker image
-      run: cd gateway && docker build -t ${{ secrets.ALIYUN_ACR_REGISTRY }}:${{ steps.env_setup.outputs.tag }} .
+      run: cd gateway && docker build -t ${{ secrets.ALIYUN_ACR_REGISTRY }}:$REPO_TAG .
     - name: Push the Docker image
-      run: docker push ${{ secrets.ALIYUN_ACR_REGISTRY }}:${{ steps.env_setup.outputs.tag }}
+      run: docker push ${{ secrets.ALIYUN_ACR_REGISTRY }}:$REPO_TAG
     # This step can be moved to the deploy.yml file in the future
     - name: Update remote server
       uses: appleboy/ssh-action@v1.0.0
@@ -58,9 +58,9 @@ jobs:
         password: ${{ secrets.DEVELOPMENT_SERVER_PASSWORD }}
         port: ${{ secrets.DEVELOPMENT_SERVER_PORT }}
         script: |
-          docker pull ${{ secrets.ALIYUN_ACR_REGISTRY }}:${{ steps.env_setup.outputs.tag }}
-          if docker ps --format '{{.Image}}' | grep gateway; then
-            docker stop gateway
-            docker rm gateway
+          docker pull ${{ secrets.ALIYUN_ACR_REGISTRY }}:$REPO_TAG
+          if docker ps --format '{{.Image}}' | grep goravel-market-gateway; then
+            docker stop goravel-market-gateway
+            docker rm goravel-market-gateway
           fi
-          docker run -dit -p 4000:4000 -e APP_PORT=4000 -e GRPC_USER_PORT=4010 -e GATEWAY_PORT=4001 -e APP_ENV=development -e APP_KEY=${{ secrets.GATEWAY_APP_KEY }} -e APP_DEBUG=true --network goravel-market --network-alias gateway --name goravel-market-gateway ${{ secrets.ALIYUN_ACR_REGISTRY }}:${{ steps.env_setup.outputs.tag }}
+          docker run -dit -p 4000:4000 -e APP_PORT=4000 -e GRPC_USER_PORT=4010 -e GATEWAY_PORT=4001 -e APP_ENV=development -e APP_KEY=${{ secrets.GATEWAY_APP_KEY }} -e APP_DEBUG=true --network goravel-market --network-alias gateway --name goravel-market-gateway ${{ secrets.ALIYUN_ACR_REGISTRY }}:$REPO_TAG
