Optimize gateway docker build

--- a/.github/workflows/build-docker-image.yml
+++ b/.github/workflows/build-docker-image.yml
@@ -49,12 +49,14 @@ jobs:
     # This step can be moved to the deploy.yml file in the future
     - name: Update remote server
       uses: appleboy/ssh-action@v1.0.0
+      env:
+        IMAGE: ${{ secrets.ALIYUN_ACR_REGISTRY }}:$REPO_TAG
       with:
         host: ${{ secrets.DEVELOPMENT_SERVER_HOST }}
         username: ${{ secrets.DEVELOPMENT_SERVER_USERNAME }}
         password: ${{ secrets.DEVELOPMENT_SERVER_PASSWORD }}
         port: ${{ secrets.DEVELOPMENT_SERVER_PORT }}
+        envs: IMAGE
         script: |
-          echo ${{ secrets.ALIYUN_ACR_REGISTRY }}
-          echo $REPO_TAG
-          docker pull ${{ secrets.ALIYUN_ACR_REGISTRY }}:$REPO_TAG
+          echo $IMAGE
+          docker pull $IMAGE
