--- a/.github/workflows/build-docker-image.yml
+++ b/.github/workflows/build-docker-image.yml
@@ -32,5 +32,6 @@ jobs:
         port: ${{ secrets.DEVELOPMENT_SERVER_PORT }}
         envs: REPO_TAG
         script: |
-          echo "$IMAGE"
           docker pull ${{ secrets.ALIYUN_ACR_REGISTRY }}:$REPO_TAG
+          if docker ps --format '{{.Image}}' | grep goravel-market-gateway; then docker stop goravel-market-gateway && docker rm goravel-market-gateway; fi
+          docker run -dit -p 4000:4000 -e APP_PORT=4000 -e GRPC_USER_PORT=4010 -e GATEWAY_PORT=4001 -e APP_ENV=development -e APP_KEY=${{ secrets.GATEWAY_APP_KEY }} -e APP_DEBUG=true --network goravel-market --network-alias gateway --name goravel-market-gateway ${{ secrets.ALIYUN_ACR_REGISTRY }}:$REPO_TAG
