--- a/.github/workflows/build-docker-image.yml
+++ b/.github/workflows/build-docker-image.yml
@@ -33,7 +33,7 @@ jobs:
         envs: REPO_TAG
         script: |
           docker pull ${{ secrets.ALIYUN_ACR_REGISTRY }}:$REPO_TAG
-          if docker ps --format '{{.Image}}' | grep goravel-market-gateway; then 
+          if docker ps --format '{{.Names}}' | grep goravel-market-gateway; then 
             docker stop goravel-market-gateway && docker rm goravel-market-gateway 
           fi
           docker run -dit -p 4000:4000 -e APP_PORT=4000 -e GRPC_USER_PORT=4010 -e GATEWAY_PORT=4001 -e APP_ENV=development -e APP_KEY=${{ secrets.GATEWAY_APP_KEY }} -e APP_DEBUG=true --network goravel-market --network-alias gateway --name goravel-market-gateway ${{ secrets.ALIYUN_ACR_REGISTRY }}:$REPO_TAG
