--- a/.github/workflows/build-docker-image.yml
+++ b/.github/workflows/build-docker-image.yml
@@ -7,6 +7,7 @@ on:
 jobs:
   gateway:
     if: startsWith(github.ref, 'refs/tags/gateway-')
+    environment: development
     strategy:
       matrix:
         go:
@@ -14,10 +15,43 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
+
     - name: Set up environment
       id: env_setup
       run: |
         echo "REPO_TAG=${GITHUB_REF##*/}" >> $GITHUB_ENV
+
+    - uses: actions/setup-go@v5
+      with:
+        go-version: ${{ matrix.go }}
+
+    - name: go mod pakcage cache
+      uses: actions/cache@v3
+      with:
+        path: |
+          ~/.cache/go-build
+          ~/go/pkg/mod
+        key: ${{ runner.os }}-go-${{ matrix.go }}-${{ hashFiles('**/go.mod') }}
+
+    - name: Install dependencies
+      run: cd ./src/go && go mod tidy
+
+    - name: go build
+      run: cd ./src/go/gateway && GOOS=linux GOARCH=amd64 CGO_ENABLED=0 go build --ldflags '-extldflags -static"' -o main .
+
+    - name: Login to ACR
+      uses: aliyun/acr-login@v1
+      with:
+        username: ${{ secrets.ALIYUN_ACR_USERNAME }}
+        password: ${{ secrets.ALIYUN_ACR_PASSWORD }}
+        region-id: ${{ secrets.ALIYUN_ACR_REGION_ID }}
+        login-server: ${{ secrets.ALIYUN_ACR_LOGIN_SERVER }}
+
+    - name: Build the Docker image
+      run: cd ./src/go/gateway && docker build -t ${{ secrets.ALIYUN_ACR_REGISTRY }}:$REPO_TAG .
+
+    - name: Push the Docker image
+      run: docker push ${{ secrets.ALIYUN_ACR_REGISTRY }}:$REPO_TAG
 
     # This step can be moved to the deploy.yml file in the future
     - name: Load deploy configuration
@@ -29,22 +63,132 @@ jobs:
     - name: Update remote server
       uses: appleboy/ssh-action@v1.0.0
       env:
-        HTTP_PORT: ${{ steps.load_config.outputs.development__gateway__http_port }}
-        GATEWAY_PORT: ${{ steps.load_config.outputs.development__gateway__gateway_port }}
-        USER_GRPC_PORT: ${{ steps.load_config.outputs.development__user__grpc_port }}
+        HTTP_PORT: ${{ steps.load_config.outputs.development__gateway__http__port }}
+        GATEWAY_PORT: ${{ steps.load_config.outputs.development__gateway__gateway__port }}
+        GRPC_USER_HOST: ${{ steps.load_config.outputs.development__user__grpc__HOST }}
+        GRPC_USER_PORT: ${{ steps.load_config.outputs.development__user__grpc__port }}
       with:
-        host: ${{ secrets.DEVELOPMENT_SERVER_HOST }}
-        username: ${{ secrets.DEVELOPMENT_SERVER_USERNAME }}
-        password: ${{ secrets.DEVELOPMENT_SERVER_PASSWORD }}
-        port: ${{ secrets.DEVELOPMENT_SERVER_PORT }}
-        envs: REPO_TAG,HTTP_PORT,GATEWAY_PORT,USER_GRPC_PORT
+        host: ${{ secrets.SERVER_HOST }}
+        username: ${{ secrets.SERVER_USERNAME }}
+        password: ${{ secrets.SERVER_PASSWORD }}
+        port: ${{ secrets.SERVER_PORT }}
+        envs: REPO_TAG,HTTP_PORT,GATEWAY_PORT,GRPC_USER_HOST,GRPC_USER_PORT
         script: |
-          echo "HTTP_PORT=$HTTP_PORT"
-          echo "GATEWAY_PORT=$GATEWAY_PORT"
-          echo "USER_GRPC_PORT=$USER_GRPC_PORT"
-          
           docker pull ${{ secrets.ALIYUN_ACR_REGISTRY }}:$REPO_TAG
           if docker ps --format '{{.Names}}' | grep goravel-market-gateway; then 
             docker stop goravel-market-gateway && docker rm goravel-market-gateway 
           fi
-          docker run -dit -p $HTTP_PORT:$HTTP_PORT -e APP_PORT=$HTTP_PORT -e GRPC_USER_PORT=$USER_GRPC_PORT -e GATEWAY_PORT=$GATEWAY_PORT -e APP_ENV=development -e APP_KEY=${{ secrets.GATEWAY_APP_KEY }} -e APP_DEBUG=true --network goravel-market --network-alias gateway --name goravel-market-gateway ${{ secrets.ALIYUN_ACR_REGISTRY }}:$REPO_TAG
+          docker run -dit \
+            -p $HTTP_PORT:$HTTP_PORT \
+            -e APP_ENV=development \
+            -e APP_KEY=${{ secrets.GATEWAY_APP_KEY }} \
+            -e APP_DEBUG=true \
+            -e APP_HOST=0.0.0.0 \
+            -e APP_PORT=$HTTP_PORT \
+            -e GRPC_USER_HOST=$GRPC_USER_HOST \
+            -e GRPC_USER_PORT=$GRPC_USER_PORT \
+            -e GATEWAY_HOST=0.0.0.0 \
+            -e GATEWAY_PORT=$GATEWAY_PORT \
+            --network goravel-market \
+            --network-alias gateway \
+            --name goravel-market-gateway \
+            ${{ secrets.ALIYUN_ACR_REGISTRY }}:$REPO_TAG
+
+  user:
+    if: startsWith(github.ref, 'refs/tags/user-')
+    environment: development
+    strategy:
+      matrix:
+        go:
+          - "1.21"
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up environment
+        id: env_setup
+        run: |
+          echo "REPO_TAG=${GITHUB_REF##*/}" >> $GITHUB_ENV
+
+      - uses: actions/setup-go@v5
+        with:
+          go-version: ${{ matrix.go }}
+
+      - name: go mod pakcage cache
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.cache/go-build
+            ~/go/pkg/mod
+          key: ${{ runner.os }}-go-${{ matrix.go }}-${{ hashFiles('**/go.mod') }}
+
+      - name: Install dependencies
+        run: cd ./src/go && go mod tidy
+
+      - name: go build
+        run: cd ./src/go/user && GOOS=linux GOARCH=amd64 CGO_ENABLED=0 go build --ldflags '-extldflags -static"' -o main .
+
+      - name: Login to ACR
+        uses: aliyun/acr-login@v1
+        with:
+          username: ${{ secrets.ALIYUN_ACR_USERNAME }}
+          password: ${{ secrets.ALIYUN_ACR_PASSWORD }}
+          region-id: ${{ secrets.ALIYUN_ACR_REGION_ID }}
+          login-server: ${{ secrets.ALIYUN_ACR_LOGIN_SERVER }}
+
+      - name: Build the Docker image
+        run: cd ./src/go/user && docker build -t ${{ secrets.ALIYUN_ACR_REGISTRY }}:$REPO_TAG .
+
+      - name: Push the Docker image
+        run: docker push ${{ secrets.ALIYUN_ACR_REGISTRY }}:$REPO_TAG
+
+      # This step can be moved to the deploy.yml file in the future
+      - name: Load deploy configuration
+        uses: actions-tools/yaml-outputs@v2
+        id: load_config
+        with:
+          file-path: ./config/deploy.yml
+
+      - name: Update remote server
+        uses: appleboy/ssh-action@v1.0.0
+        env:
+          GRPC_PORT: ${{ steps.load_config.outputs.development__user__grpc__port }}
+          DB_HOST: ${{ steps.load_config.outputs.development__user__db__host }}
+          DB_PORT: ${{ steps.load_config.outputs.development__user__db__port }}
+          DB_DATABASE: ${{ steps.load_config.outputs.development__user__db__database }}
+          REDIS_HOST: ${{ steps.load_config.outputs.development__user__redis__host }}
+          REDIS_PORT: ${{ steps.load_config.outputs.development__user__redis__port }}
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USERNAME }}
+          password: ${{ secrets.SERVER_PASSWORD }}
+          port: ${{ secrets.SERVER_PORT }}
+          envs: REPO_TAG,GRPC_PORT,DB_HOST,DB_PORT,DB_DATABASE,REDIS_HOST,REDIS_PORT
+          script: |
+            docker pull ${{ secrets.ALIYUN_ACR_REGISTRY }}:$REPO_TAG
+            if docker ps --format '{{.Names}}' | grep goravel-market-user; then 
+              docker stop goravel-market-user && docker rm goravel-market-user 
+            fi
+            docker run -dit \
+              -p $GRPC_PORT:$GRPC_PORT \
+              -e APP_ENV=development \
+              -e APP_KEY=${{ secrets.USER_APP_KEY }} \
+              -e APP_DEBUG=true \
+              -e GRPC_HOST=0.0.0.0 \
+              -e GRPC_PORT=$GRPC_PORT \
+              -e JWT_SECRET=${{ secrets.USER_JWT_SECRET }} \
+              -e DB_HOST=$DB_HOST \
+              -e DB_PORT=$DB_PORT \
+              -e DB_DATABASE=$DB_DATABASE \
+              -e DB_USERNAME=${{ secrets.POSTGRES_USERNAME }} \
+              -e DB_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} \
+              -e REDIS_HOST=$REDIS_HOST \
+              -e REDIS_PORT=$REDIS_PORT \
+              -e MAIL_HOST=${{ secrets.MAIL_HOST }} \
+              -e MAIL_PORT=${{ secrets.MAIL_HOST }} \
+              -e MAIL_USERNAME=${{ secrets.MAIL_USERNAME }} \
+              -e MAIL_PASSWORD=${{ secrets.MAIL_PASSWORD }} \
+              --network goravel-market \
+              --network-alias user \
+              --name goravel-market-user \
+              ${{ secrets.ALIYUN_ACR_REGISTRY }}:$REPO_TAG
