--- a/.github/workflows/build-docker-image.yml
+++ b/.github/workflows/build-docker-image.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   gateway:
     if: startsWith(github.ref, 'refs/tags/gateway-')
-    environment: development
+    environment: staging
     strategy:
       matrix:
         go:
@@ -63,10 +63,10 @@ jobs:
     - name: Update remote server
       uses: appleboy/ssh-action@v1.0.0
       env:
-        HTTP_PORT: ${{ steps.load_config.outputs.development__gateway__http__port }}
-        GATEWAY_PORT: ${{ steps.load_config.outputs.development__gateway__gateway__port }}
-        GRPC_USER_HOST: ${{ steps.load_config.outputs.development__user__grpc__HOST }}
-        GRPC_USER_PORT: ${{ steps.load_config.outputs.development__user__grpc__port }}
+        HTTP_PORT: ${{ steps.load_config.outputs.staging__gateway__http__port }}
+        GATEWAY_PORT: ${{ steps.load_config.outputs.staging__gateway__gateway__port }}
+        GRPC_USER_HOST: ${{ steps.load_config.outputs.staging__user__grpc__HOST }}
+        GRPC_USER_PORT: ${{ steps.load_config.outputs.staging__user__grpc__port }}
       with:
         host: ${{ secrets.SERVER_HOST }}
         username: ${{ secrets.SERVER_USERNAME }}
@@ -80,7 +80,7 @@ jobs:
           fi
           docker run -dit \
             -p $HTTP_PORT:$HTTP_PORT \
-            -e APP_ENV=development \
+            -e APP_ENV=staging \
             -e APP_KEY=${{ secrets.GATEWAY_APP_KEY }} \
             -e APP_DEBUG=true \
             -e APP_HOST=0.0.0.0 \
@@ -96,7 +96,7 @@ jobs:
 
   user:
     if: startsWith(github.ref, 'refs/tags/user-')
-    environment: development
+    environment: staging
     strategy:
       matrix:
         go:
@@ -152,12 +152,12 @@ jobs:
       - name: Update remote server
         uses: appleboy/ssh-action@v1.0.0
         env:
-          GRPC_PORT: ${{ steps.load_config.outputs.development__user__grpc__port }}
-          DB_HOST: ${{ steps.load_config.outputs.development__user__db__host }}
-          DB_PORT: ${{ steps.load_config.outputs.development__user__db__port }}
-          DB_DATABASE: ${{ steps.load_config.outputs.development__user__db__database }}
-          REDIS_HOST: ${{ steps.load_config.outputs.development__user__redis__host }}
-          REDIS_PORT: ${{ steps.load_config.outputs.development__user__redis__port }}
+          GRPC_PORT: ${{ steps.load_config.outputs.staging__user__grpc__port }}
+          DB_HOST: ${{ steps.load_config.outputs.staging__user__db__host }}
+          DB_PORT: ${{ steps.load_config.outputs.staging__user__db__port }}
+          DB_DATABASE: ${{ steps.load_config.outputs.staging__user__db__database }}
+          REDIS_HOST: ${{ steps.load_config.outputs.staging__user__redis__host }}
+          REDIS_PORT: ${{ steps.load_config.outputs.staging__user__redis__port }}
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USERNAME }}
@@ -171,7 +171,7 @@ jobs:
             fi
             docker run -dit \
               -p $GRPC_PORT:$GRPC_PORT \
-              -e APP_ENV=development \
+              -e APP_ENV=staging \
               -e APP_KEY=${{ secrets.USER_APP_KEY }} \
               -e APP_DEBUG=true \
               -e GRPC_HOST=0.0.0.0 \
