Add WireGuard VPN document

--- a/src/go/user/Dockerfile
+++ b/src/go/user/Dockerfile
@@ -7,6 +7,7 @@ COPY ./database/ /www/database/
 COPY ./public/ /www/public/
 COPY ./storage/ /www/storage/
 COPY ./resources/ /www/resources/
+COPY ./lang/ /www/lang/
 
 ENV APP_NAME=Gateway \
     APP_ENV=${APP_ENV}  \
