--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,12 +4,78 @@ on:
   workflow_dispatch:
     inputs:
       env:
-        description: 'The environment: development or production'
+        description: 'The environment'
         required: true
-        default: 'development'
+        type: choice
+        options:
+          - staging
+          - production
+      tag:
+        description: 'The repository tag'
+        required: true
+        type: string
+  workflow_call:
+    inputs:
+      env:
+        description: 'The environment: staging or production'
+        required: true
+        type: string
+      tag:
+        description: 'The repository tag'
+        required: true
+        type: string
 jobs:
   deploy:
+    environment: ${{ inputs.env }}
     runs-on: ubuntu-latest
     steps:
-    - name: Print
-      run: echo "env - ${{ github.event.inputs.env }}"
+    - uses: actions/checkout@v4
+
+    - name: Login to ACR
+      uses: aliyun/acr-login@v1
+      with:
+        username: ${{ secrets.ALIYUN_ACR_USERNAME }}
+        password: ${{ secrets.ALIYUN_ACR_PASSWORD }}
+        region-id: ${{ secrets.ALIYUN_ACR_REGION_ID }}
+        login-server: ${{ secrets.ALIYUN_ACR_LOGIN_SERVER }}
+
+    - name: Load deploy configuration
+      uses: actions-tools/yaml-outputs@v2
+      id: load_config
+      with:
+        file-path: ./config/deploy.yml
+
+    - name: Deploy gateway
+      if: startsWith(inputs.tag, 'gateway-')
+      uses: appleboy/ssh-action@v1.0.0
+      env:
+        HTTP_PORT: ${{ steps.load_config.outputs.staging__gateway__http__port }}
+        GATEWAY_PORT: ${{ steps.load_config.outputs.staging__gateway__gateway__port }}
+        GRPC_USER_HOST: ${{ steps.load_config.outputs.staging__user__grpc__HOST }}
+        GRPC_USER_PORT: ${{ steps.load_config.outputs.staging__user__grpc__port }}
+      with:
+        host: ${{ secrets.SERVER_HOST }}
+        username: ${{ secrets.SERVER_USERNAME }}
+        password: ${{ secrets.SERVER_PASSWORD }}
+        port: ${{ secrets.SERVER_PORT }}
+        envs: REPO_TAG,HTTP_PORT,GATEWAY_PORT,GRPC_USER_HOST,GRPC_USER_PORT
+        script: |
+          docker pull ${{ secrets.ALIYUN_ACR_REGISTRY }}:$REPO_TAG
+          if docker ps --format '{{.Names}}' | grep goravel-market-gateway; then 
+            docker stop goravel-market-gateway && docker rm goravel-market-gateway 
+          fi
+          docker run -dit \
+            -p $HTTP_PORT:$HTTP_PORT \
+            -e APP_ENV=staging \
+            -e APP_KEY=${{ secrets.GATEWAY_APP_KEY }} \
+            -e APP_DEBUG=true \
+            -e APP_HOST=0.0.0.0 \
+            -e APP_PORT=$HTTP_PORT \
+            -e GRPC_USER_HOST=$GRPC_USER_HOST \
+            -e GRPC_USER_PORT=$GRPC_USER_PORT \
+            -e GATEWAY_HOST=0.0.0.0 \
+            -e GATEWAY_PORT=$GATEWAY_PORT \
+            --network goravel-market \
+            --network-alias gateway \
+            --name goravel-market-gateway \
+            ${{ secrets.ALIYUN_ACR_REGISTRY }}:$REPO_TAG
