--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,35 +50,11 @@ jobs:
 
     - name: Deploy gateway
       if: startsWith(inputs.tag, 'gateway-')
-      uses: appleboy/ssh-action@v1.0.0
-      env:
-        HTTP_PORT: ${{ steps.load_config.outputs.staging__gateway__http__port }}
-        GATEWAY_PORT: ${{ steps.load_config.outputs.staging__gateway__gateway__port }}
-        GRPC_USER_HOST: ${{ steps.load_config.outputs.staging__user__grpc__HOST }}
-        GRPC_USER_PORT: ${{ steps.load_config.outputs.staging__user__grpc__port }}
+      uses: ./.github/deploy/gateway
       with:
-        host: ${{ secrets.SERVER_HOST }}
-        username: ${{ secrets.SERVER_USERNAME }}
-        password: ${{ secrets.SERVER_PASSWORD }}
-        port: ${{ secrets.SERVER_PORT }}
-        envs: REPO_TAG,HTTP_PORT,GATEWAY_PORT,GRPC_USER_HOST,GRPC_USER_PORT
-        script: |
-          docker pull ${{ secrets.ALIYUN_ACR_REGISTRY }}:${{ inputs.tag }}
-          if docker ps --format '{{.Names}}' | grep goravel-market-gateway; then 
-            docker stop goravel-market-gateway && docker rm goravel-market-gateway 
-          fi
-          docker run -dit \
-            -p $HTTP_PORT:$HTTP_PORT \
-            -e APP_ENV=${{ inputs.env }} \
-            -e APP_KEY=${{ secrets.GATEWAY_APP_KEY }} \
-            -e APP_DEBUG=true \
-            -e APP_HOST=0.0.0.0 \
-            -e APP_PORT=$HTTP_PORT \
-            -e GRPC_USER_HOST=$GRPC_USER_HOST \
-            -e GRPC_USER_PORT=$GRPC_USER_PORT \
-            -e GATEWAY_HOST=0.0.0.0 \
-            -e GATEWAY_PORT=$GATEWAY_PORT \
-            --network goravel-market \
-            --network-alias gateway \
-            --name goravel-market-gateway \
-            ${{ secrets.ALIYUN_ACR_REGISTRY }}:${{ inputs.tag }}
+        env: ${{ inputs.env }}
+        tag: ${{ inputs.tag }}
+        http_port: ${{ steps.load_config.outputs.staging__gateway__http__port }}
+        gateway_port: ${{ steps.load_config.outputs.staging__gateway__gateway__port }}
+        grpc_user_host: ${{ steps.load_config.outputs.staging__user__grpc__HOST }}
+        grpc_user_port: ${{ steps.load_config.outputs.staging__user__grpc__port }}
