--- a/.github/workflows/build-docker-image.yml
+++ b/.github/workflows/build-docker-image.yml
@@ -7,7 +7,6 @@ on:
 jobs:
   gateway:
     if: startsWith(github.ref, 'refs/tags/gateway-')
-    environment: staging
     strategy:
       matrix:
         go:
@@ -53,46 +52,11 @@ jobs:
     - name: Push the Docker image
       run: docker push ${{ secrets.ALIYUN_ACR_REGISTRY }}:$REPO_TAG
 
-    # This step can be moved to the deploy.yml file in the future
-    - name: Load deploy configuration
-      uses: actions-tools/yaml-outputs@v2
-      id: load_config
+    - name: Deploy staging
+      uses: ./.github/workflows/deploy.yml
       with:
-        file-path: ./config/deploy.yml
-
-    - name: Update remote server
-      uses: appleboy/ssh-action@v1.0.0
-      env:
-        HTTP_PORT: ${{ steps.load_config.outputs.staging__gateway__http__port }}
-        GATEWAY_PORT: ${{ steps.load_config.outputs.staging__gateway__gateway__port }}
-        GRPC_USER_HOST: ${{ steps.load_config.outputs.staging__user__grpc__HOST }}
-        GRPC_USER_PORT: ${{ steps.load_config.outputs.staging__user__grpc__port }}
-      with:
-        host: ${{ secrets.SERVER_HOST }}
-        username: ${{ secrets.SERVER_USERNAME }}
-        password: ${{ secrets.SERVER_PASSWORD }}
-        port: ${{ secrets.SERVER_PORT }}
-        envs: REPO_TAG,HTTP_PORT,GATEWAY_PORT,GRPC_USER_HOST,GRPC_USER_PORT
-        script: |
-          docker pull ${{ secrets.ALIYUN_ACR_REGISTRY }}:$REPO_TAG
-          if docker ps --format '{{.Names}}' | grep goravel-market-gateway; then 
-            docker stop goravel-market-gateway && docker rm goravel-market-gateway 
-          fi
-          docker run -dit \
-            -p $HTTP_PORT:$HTTP_PORT \
-            -e APP_ENV=staging \
-            -e APP_KEY=${{ secrets.GATEWAY_APP_KEY }} \
-            -e APP_DEBUG=true \
-            -e APP_HOST=0.0.0.0 \
-            -e APP_PORT=$HTTP_PORT \
-            -e GRPC_USER_HOST=$GRPC_USER_HOST \
-            -e GRPC_USER_PORT=$GRPC_USER_PORT \
-            -e GATEWAY_HOST=0.0.0.0 \
-            -e GATEWAY_PORT=$GATEWAY_PORT \
-            --network goravel-market \
-            --network-alias gateway \
-            --name goravel-market-gateway \
-            ${{ secrets.ALIYUN_ACR_REGISTRY }}:$REPO_TAG
+        env: staging
+        tag: $REPO_TAG
 
   user:
     if: startsWith(github.ref, 'refs/tags/user-')
