--- a/.github/workflows/build-docker-image.yml
+++ b/.github/workflows/build-docker-image.yml
@@ -13,7 +13,7 @@ jobs:
           - "1.21"
     runs-on: ubuntu-latest
     outputs:
-      tag: ${GITHUB_REF##*/}
+      tag: ${{ steps.env_setup.outputs.tag }}
     steps:
     - uses: actions/checkout@v4
 
@@ -21,6 +21,7 @@ jobs:
       id: env_setup
       run: |
         echo "REPO_TAG=${GITHUB_REF##*/}" >> $GITHUB_ENV
+        echo "::set-output name=tag::${GITHUB_REF##*/}"
 
     - uses: actions/setup-go@v5
       with:
