--- a/.github/workflows/build-docker-image.yml
+++ b/.github/workflows/build-docker-image.yml
@@ -5,8 +5,7 @@ on:
     tags:
       - '*'
 jobs:
-  gateway:
-    if: startsWith(github.ref, 'refs/tags/gateway-')
+  build:
     strategy:
       matrix:
         go:
@@ -20,7 +19,10 @@ jobs:
     - name: Set up environment
       id: env_setup
       run: |
-        echo "REPO_TAG=${GITHUB_REF##*/}" >> $GITHUB_ENV
+        REPO_TAG=${GITHUB_REF##*/}
+        SERVER_NAME=${VERSION_STRING%-*}
+        echo "REPO_TAG=$REPO_TAG" >> $GITHUB_ENV
+        echo "SERVER_NAME=$SERVER_NAME" >> $GITHUB_ENV
         echo "::set-output name=tag::${GITHUB_REF##*/}"
 
     - uses: actions/setup-go@v5
@@ -39,7 +41,9 @@ jobs:
       run: cd ./src/go && go mod tidy
 
     - name: go build
-      run: cd ./src/go/gateway && GOOS=linux GOARCH=amd64 CGO_ENABLED=0 go build --ldflags '-extldflags -static"' -o main .
+      run: |
+        echo $SERVER_NAME
+        cd ./src/go/$SERVER_NAME && GOOS=linux GOARCH=amd64 CGO_ENABLED=0 go build --ldflags '-extldflags -static"' -o main .
 
     - name: Login to ACR
       uses: aliyun/acr-login@v1
@@ -50,17 +54,17 @@ jobs:
         login-server: ${{ secrets.ALIYUN_ACR_LOGIN_SERVER }}
 
     - name: Build the Docker image
-      run: cd ./src/go/gateway && docker build -t ${{ secrets.ALIYUN_ACR_REGISTRY }}:$REPO_TAG .
+      run: cd ./src/go/$SERVER_NAME && docker build -t ${{ secrets.ALIYUN_ACR_REGISTRY }}:$REPO_TAG .
 
     - name: Push the Docker image
       run: docker push ${{ secrets.ALIYUN_ACR_REGISTRY }}:$REPO_TAG
 
   deploy-staging:
-    needs: gateway
+    needs: build
     uses: ./.github/workflows/deploy.yml
     with:
       env: staging
-      tag: ${{ needs.gateway.outputs.tag }}
+      tag: ${{ needs.build.outputs.tag }}
     secrets: inherit
 
   user:
