--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,18 +46,29 @@ jobs:
       with:
         file-path: ./config/deploy.yml
 
+    - name: Read deploy.sh
+      id: read_deploy
+      run: echo "DEPLOY<<EOF" >> $GITHUB_ENV && cat ./src/go/gateway/deploy.sh >> $GITHUB_ENV && echo "EOF" >> $GITHUB_ENV
+
     - name: Deploy gateway
-      if: startsWith(inputs.tag, 'gateway-')
-      uses: ./.github/deploy/gateway
+      uses: appleboy/ssh-action@v1.0.0
+      env:
+        NAME: gateway
+        APP_KEY: ${{ secrets.GATEWAY_APP_KEY }}
+        HTTP_PORT: ${{ steps.load_config.outputs.staging__gateway__http__port }}
+        GATEWAY_PORT: ${{ steps.load_config.outputs.staging__gateway__gateway__port }}
+        GRPC_USER_HOST: ${{ steps.load_config.outputs.staging__user__grpc__HOST }}
+        GRPC_USER_PORT: ${{ steps.load_config.outputs.staging__user__grpc__port }}
       with:
-        env: ${{ inputs.env }}
-        image: ${{ secrets.ALIYUN_ACR_REGISTRY }}:${{ inputs.tag }}
-        server_host: ${{ secrets.SERVER_HOST }}
-        server_username: ${{ secrets.SERVER_USERNAME }}
-        server_password: ${{ secrets.SERVER_PASSWORD }}
-        server_port: ${{ secrets.SERVER_PORT }}
-        app_key: ${{ secrets.GATEWAY_APP_KEY }}
-        http_port: ${{ steps.load_config.outputs.staging__gateway__http__port }}
-        gateway_port: ${{ steps.load_config.outputs.staging__gateway__gateway__port }}
-        grpc_user_host: ${{ steps.load_config.outputs.staging__user__grpc__HOST }}
-        grpc_user_port: ${{ steps.load_config.outputs.staging__user__grpc__port }}
+        host: ${{ secrets.SERVER_HOST }}
+        username: ${{ secrets.SERVER_USERNAME }}
+        password: ${{ secrets.SERVER_PASSWORD }}
+        port: ${{ secrets.SERVER_PORT }}
+        allenvs: true
+        script: |
+          echo $DEPLOY
+          docker pull ${{ secrets.ALIYUN_ACR_REGISTRY }}:${{ inputs.tag }}
+          if docker ps --format '{{.Names}}' | grep goravel-market-$NAME; then 
+            docker stop goravel-market-$NAME && docker rm goravel-market-$NAME 
+          fi
+          $DEPLOY
