--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,7 +48,10 @@ jobs:
 
     - name: Read deploy.sh
       id: read_deploy
-      run: echo "DEPLOY<<EOF" >> $GITHUB_ENV && cat ./src/go/gateway/deploy.sh >> $GITHUB_ENV && echo "EOF" >> $GITHUB_ENV
+      run: |
+        echo "DEPLOY<<EOF" >> $GITHUB_ENV
+        cat ./src/go/gateway/deploy.sh >> $GITHUB_ENV
+        echo "EOF" >> $GITHUB_ENV
 
     - name: Deploy gateway
       uses: appleboy/ssh-action@v1.0.0
