--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,10 +50,10 @@ jobs:
       id: read_deploy
       run: |
         {
-          echo 'DEPLOY<<EOF'
+          echo "DEPLOY<<EOF"
           cat ./src/go/gateway/deploy.sh
-          echo EOF
-        } >> "$GITHUB_ENV"
+          echo "EOF"
+        } >> $GITHUB_ENV
 
     - name: Deploy gateway
       uses: appleboy/ssh-action@v1.0.0
