--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,7 +53,7 @@ jobs:
         delimiter=$(openssl rand -hex 8)
         {
           echo "DEPLOY<<$delimiter"
-          echo "abc"
+          cat ./src/go/gateway/deploy.sh
           echo "$delimiter"
         } >> $GITHUB_ENV
 
