--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -54,8 +54,10 @@ jobs:
     - name: Deploy gateway
       uses: appleboy/ssh-action@v1.0.0
       env:
+        ENV: ${{ inputs.env }}
         NAME: gateway
         APP_KEY: ${{ secrets.GATEWAY_APP_KEY }}
+        IMAGE: ${{ secrets.ALIYUN_ACR_REGISTRY }}:${{ inputs.tag }}
         HTTP_PORT: ${{ steps.load_config.outputs.staging__gateway__http__port }}
         GATEWAY_PORT: ${{ steps.load_config.outputs.staging__gateway__gateway__port }}
         GRPC_USER_HOST: ${{ steps.load_config.outputs.staging__user__grpc__HOST }}
@@ -65,7 +67,7 @@ jobs:
         username: ${{ secrets.SERVER_USERNAME }}
         password: ${{ secrets.SERVER_PASSWORD }}
         port: ${{ secrets.SERVER_PORT }}
-        envs: DEPLOY,NAME,APP_KEY,HTTP_PORT,GATEWAY_PORT,GRPC_USER_HOST,GRPC_USER_PORT
+        envs: ENV,IMAGE,DEPLOY,NAME,APP_KEY,HTTP_PORT,GATEWAY_PORT,GRPC_USER_HOST,GRPC_USER_PORT
         script: |
           echo $DEPLOY | base64 -d
           docker pull ${{ secrets.ALIYUN_ACR_REGISTRY }}:${{ inputs.tag }}
